--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "facerecognitionapi",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,5 +15,7 @@
     "knex": "^2.5.1",
     "nodemon": "^3.0.1",
     "pg": "^8.11.1"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
